fixing contact alignment issue

--- a/components/contact/contact.scss
+++ b/components/contact/contact.scss
@@ -46,6 +46,7 @@
 	&__form {
 		display: flex;
 		flex-direction: column;
+      align-items: center;
 		gap: 1.2rem;
 		margin-top: 2rem;
 		padding: 1.5rem;
